# order_book_server

./: .gitignore  ARCHITECTURE.md  README.md
.claude/: launch.json
binaries/: Cargo.toml
server/: Cargo.toml
server/src/: lib.rs  metrics.rs  test_fixtures.rs  test_subscriber.rs
server/src/instruments/: hyperliquid.rs  mod.rs
server/src/listeners/: directory.rs
server/src/listeners/order_book/: block_mode_multicast_e2e.rs  dob_tap.rs  latency.rs  mod.rs  parity_tests.rs  progress.rs  state.rs  utils.rs
server/src/multicast/: config.rs  dob.rs  mod.rs  publisher.rs
server/src/order_book/: mod.rs  multi_book.rs  per_instrument_seq.rs  types.rs
server/src/protocol/: constants.rs  frame.rs  messages.rs  mod.rs
server/src/protocol/dob/: constants.rs  frame.rs  messages.rs
server/src/servers/: websocket_server.rs
server/src/types/: mod.rs  node_data.rs
server/tests/: golden_dob_capture.rs
server/tests/fixtures/dob_golden/: regenerate.md
server/tests/fixtures/hl_block_mode/: generate_from_source.py  manifest.json  regenerate.md  regenerate_from_host.py
server/tests/fixtures/hl_dual_validator/: Dockerfile.tob-parser-e2e  README.md  capture_dual_validator_fixture.py  generate_dual_goldens.py  manifest.json  run_tob_parser_e2e_in_docker.sh
server/tests/fixtures/hl_dual_validator/golden/: parity_report.json  parser_block_tob.jsonl  parser_stream_tob.jsonl  parser_tob_end_of_block_quotes.jsonl  parser_tob_parity_report.json
server/tmp/deserialization_test/: out.json
server/tmp/ws_listener_test/hl/data/node_fills_by_block/hourly/20250624/: 1  2
(+12 files in other folders)
