[package]
name = "binaries"
version = "0.1.0"
edition = "2024"
publish = false

[dependencies]
server = { path = "../server" }
env_logger = "0.11.8"
tokio = { version = "1", features = ["full"] }
futures-util = "0.3.31"
tokio-tungstenite = "0.27.0"
clap = { version = "4.5.42", features = ["derive"] }
socket2 = "0.5"

[lints]
workspace = true
